--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,27 +10,27 @@ services:
   #     - DATABASE_URL=mysql://root:password@localhost:3306/banking
   #   ports:
   #     - "3000:3000"
-  # mariadb:
-  #   image: mariadb:latest
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: password
-  #     MYSQL_DATABASE: banking
-  #     MYSQL_USER: user
-  #     MYSQL_PASSWORD: password
-  #   ports:
-  #     - '3306:3306'
-  #   expose:
-  #     - '3306'
-  #   volumes:
-  #     - mysqldata:/var/lib/mysql
-  nginx:
-    image: nginx:latest
-    container_name: webserver
-    restart: unless-stopped
+  mariadb:
+    image: mariadb:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: banking
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
     ports:
-      - 80:80
-      - 443:443
+      - '3306:3306'
+    expose:
+      - '3306'
     volumes:
-      - /Users/krerkkiathemadhulin/Documents/banking/nginx.conf:/etc/nginx/nginx.conf
+      - mysqldata:/var/lib/mysql
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: webserver
+  #   restart: unless-stopped
+  #   ports:
+  #     - 80:80
+  #     - 443:443
+  #   volumes:
+  #     - /Users/krerkkiathemadhulin/Documents/banking/nginx.conf:/etc/nginx/nginx.conf
 volumes:
   mysqldata:
